[tool.poetry]
name = "aiologbuch"
version = "0.0.1"
description = "A tiny logging tool for Python, heavily opinionated, but very easy to use."
authors = ["Firmino Neto <firminoneto@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
anyio = "4.2.*"
aiofile = { version = "3.8.*", optional = true }

[tool.poetry.group.dev.dependencies]
ruff = "0.1.*"
pytest = "7.4.*"
coverage = "7.3.*"
pytest-sugar = "0.9.*"
uvloop = "0.19.*"
pytest-asyncio = "0.23.*"

[tool.poetry.extras]
aiofile = ["aiofile"]
all = ["aiofile"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configs
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E501"]

# Pytest configs
[tool.pytest.ini_options]
addopts = "-s -v --durations=5"
markers = ["unit", "integration", "e2e", "bug", "this"]
asyncio_mode = "auto"

# Coverage configs
[tool.coverage.run]
omit = ["test/*", "*conftest.py", "venv/*", "tests/*", "*_types.py"]
data_file = ".coverage/coverage"
branch = true

[tool.coverage.report]
skip_covered = true
precision = 2
# fail_under = 90
exclude_also = ["if TYPE_CHECKING:"]

[tool.coverage.html]
directory = ".coverage/html-report"
skip_covered = true
