[tool.poetry]
name = "aiologbuch"
version = "0.0.1"
description = "A native asyncio logging library for python."
authors = ["Firmino Neto <firminoneto@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
anyio = "4.4.*"
aiofile = { version = "3.8.*", optional = true }

[tool.poetry.group.dev.dependencies]
ruff = "0.5.*"
pytest = "8.3.*"
coverage = "7.6.*"
pytest-sugar = "1.0.*"
uvloop = "0.19.*"
pytest-asyncio = "0.23.*"
pytest-env = "1.1.*"

[tool.poetry.extras]
aiofile = ["aiofile"]
all = ["aiofile"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configs
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E501"]

# Pytest configs
[tool.pytest.ini_options]
addopts = "-s -v --durations=5"
markers = ["unit", "integration", "e2e", "bug", "this", "thing"]
asyncio_mode = "auto"

# Pytest Env configs
[tool.pytest_env]
AIOLOGBUCH_RAISE_EXCEPTIONS = 1

# Coverage configs
[tool.coverage.run]
omit = ["test/*", "*conftest.py", "venv/*", "tests/*", "*_types.py"]
data_file = ".coverage/coverage"
branch = true

[tool.coverage.report]
skip_covered = true
precision = 2
fail_under = 80
exclude_also = ["if TYPE_CHECKING:"]

[tool.coverage.html]
directory = ".coverage/html-report"
skip_covered = true
